tests/cases/errors/syntax_error.b
REM Test: Invalid keyword (should fail)
PRITN "typo in keyword"
